--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "browserslist": "^4.16.4",
     "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -35,16 +36,5 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": []
 }
