--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -18,6 +18,7 @@
     "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.31.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -38,5 +39,8 @@
       "react-app/jest"
     ]
   },
-  "browserslist": []
+  "browserslist": [],
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
+  }
 }
