--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -13,15 +13,19 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "animate.css-react": "^1.1.0",
     "axios": "^0.21.1",
     "browserslist": "^4.16.4",
+    "cypress": "^7.1.0",
     "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
+    "react-notifications-component": "^3.1.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-web-share": "^1.1.0",
     "redux": "^4.0.5",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
@@ -41,6 +45,7 @@
   },
   "browserslist": [],
   "devDependencies": {
+    "@types/react-notifications-component": "^3.1.0",
     "@types/react-router-dom": "^5.1.7"
   }
 }
