--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -16,8 +16,8 @@
     "animate.css-react": "^1.1.0",
     "axios": "^0.21.1",
     "browserslist": "^4.16.4",
-    "cypress": "^7.1.0",
     "firebase": "^8.3.2",
+    "firebase-tools": "^9.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
@@ -46,6 +46,9 @@
   "browserslist": [],
   "devDependencies": {
     "@types/react-notifications-component": "^3.1.0",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "cypress": "^7.1.0",
+    "mocha": "^8.3.2",
+    "mochawesome": "^6.2.2"
   }
 }
