--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -6,6 +6,7 @@
     "@firebase/firestore": "^2.2.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -29,6 +30,7 @@
     "redux": "^4.0.5",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@types/react-notifications-component": "^3.1.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "cypress": "^7.1.0",
     "mocha": "^8.3.2",
     "mochawesome": "^6.2.2"
